# bnbsystematics

./: CMakeLists.txt  analysing_zarkos_files.txt  annie_bnb_fluxfiles.txt  filecontents.txt  readme.txt
Base/: CMakeLists.txt  WeightCalc.cxx  WeightCalc.h  WeightManager.cxx  WeightManager.h  Weight_t.h
Calculators/: CMakeLists.txt  FluxHistWeightCalc.cxx  FluxUnisimWeightCalc.cxx
Calculators/BNBPrimaryHadron/: PrimaryHadronFeynmanScalingWeightCalc.cxx  PrimaryHadronNormalizationWeightCalc.cxx  PrimaryHadronSWCentralSplineVariationWeightCalc.cxx  PrimaryHadronSanfordWangWeightCalc.cxx
Scripts/: analyze.c  submitJob.py
Setup/: setup.sh
fcl/: eventweight_microboone.fcl
src/: CMakeLists.txt  rwgh.cxx
